M&M crash fix